<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work_fragment"
        />
    <TextView 
        android:id="@+id/work_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
	<SeekBar
        android:id="@+id/work_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:max="60"
        android:progress="30"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/break_fragment"
        />
    <TextView 
        android:id="@+id/break_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <SeekBar
        android:id="@+id/break_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:max="30"
        android:progress="5"
        />
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/notices"
        />

    <CheckBox
        android:id="@+id/sound_ck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound" />
    <CheckBox
        android:id="@+id/vibrate_ck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibrate" />
    <CheckBox
        android:id="@+id/light_ck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light" />
    
</LinearLayout>