<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	<TextView 
	    android:id="@+id/time_text"
	    android:layout_width="fill_parent"
	    android:layout_height="200px"
	    />
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/start_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <Button
            android:id="@+id/work_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_btn" 
            android:layout_alignParentBottom="true"/>

        <Button
            android:id="@+id/break_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/work_btn"
            android:text="@string/break_btn"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cancel_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:visibility="gone">
	    <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_btn" 
            android:layout_alignParentBottom="true"/>
	</RelativeLayout>
    
	
</LinearLayout>